--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap" rel="stylesheet">
-    <title>Narayan Heart and Maternity Center</title>
+    <title>Narayan Heart & Maternity Centre | Top Cardiologist & Gynaecologist in Patna</title>
   </head>
   <body>
     <div id="root"></div>
